Version 1.2.3
-----------------
Maintenance release, mostly to prevent issues with rate-limiting errors when the
package is tested in CRAN. 

* The sleep commands for rate-limiting are slightly increased

* As of this release, the vignette is NOT build by default (to avoid issues with
  automated tests on CRAN). This will not affect most users, but a developers
  may want to read a wiki page describing how to build the vignette:

https://github.com/ropensci/rentrez/wiki/Building-the-rentrez-tutorial-vignette.



Version 1.2.2
------------------
Maintenance release containing a number of bug fixes. 

* A fix #127 forces curl to use http/1.1, as NCBI produces errors when sing http/2
  (thanks @hammer for bug report and fix)
* fix #131 stops pubmed records with reference sections production > 1
  value for the 'pmid' field. Thanks @agbarnett for the report.
* Added clarification around the expectd input for `extract_from_esummary` to
  the docs.

Version 1.2.1
------------------

Bug fix release. Thanks @gmbecker for pointing out a problem with the way
retmode was being used in entrez_fetch (PR #121). 

Also updates documentation to make this clear.
Removes depricated verbs from testthat code.


Version 1.2.0
------------------

rentrez updated to reflect NCBIs new API policy, allowing more requests from
users with registered keys. (Issues #115 -- #117).

CITATION updated to reflect publication in The R Journal.

Minor changes
   * clarification of search syntax in docs (issue #120)
   * ORCID ids added for all authors (issue #118)
   

Version 1.1.0
------------------

As of this release, rentrez will use httr::POST when sending > 200 ids to the
NCBI. This should make working with large ID sets easier (thanks to the NCBI for
supporing the POST methods, Reed Cartwright and Chris Stubben for pushing me on
issue #89). 

Other minor changes:
    * Pass on error messages from NCBI when too many records are requested from 
      `entrez_summary` (Issue #106)