@@ -1,3 +1,9 @@
+Development Version
+-----------------
+
+* A fix to #163 forces the use of POST for `entrez_search()` so that long query
+  strings do not get the HTTP 414 error (thanks to @billdenney for the fix).
+
 Version 1.2.3
 -----------------
 Maintenance release, mostly to prevent issues with rate-limiting errors when the
@@ -5,7 +11,7 @@ package is tested in CRAN.
 
 * The sleep commands for rate-limiting are slightly increased
 
-* As of this release, the vignette is NOT build by default (to avoid issues with
+* As of this release, the vignette is NOT built by default (to avoid issues with
   automated tests on CRAN). This will not affect most users, but a developers
   may want to read a wiki page describing how to build the vignette:
 
